{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 8,
  "lineage": "db5214c9-3dc4-d23d-468d-27b1ab773046",
  "resources": [
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "sampleapp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559072984281:loadbalancer/app/sampleappalbstaging/2427da74985930a3",
            "arn_suffix": "app/sampleappalbstaging/2427da74985930a3",
            "dns_name": "sampleappalbstaging-263630267.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:559072984281:loadbalancer/app/sampleappalbstaging/2427da74985930a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sampleappalbstaging",
            "security_groups": [
              "sg-0abae003a4ec3f2b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b542cbbbebaa2bb4"
              },
              {
                "subnet_id": "subnet-0ee267da8e92cc2b6"
              }
            ],
            "subnets": [
              "subnet-0b542cbbbebaa2bb4",
              "subnet-0ee267da8e92cc2b6"
            ],
            "tags": {
              "Environment": "staging"
            },
            "tags_all": {
              "Environment": "staging"
            },
            "vpc_id": "vpc-0c5b1742fcbd625dd",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559072984281:listener/app/sampleappalbstaging/2427da74985930a3/4317bf9cf1ba71c0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:559072984281:targetgroup/sampleapp-http-lb-tg-staging/aa0306706fe46d6e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:559072984281:listener/app/sampleappalbstaging/2427da74985930a3/4317bf9cf1ba71c0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:559072984281:loadbalancer/app/sampleappalbstaging/2427da74985930a3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_module.aws_lb.sampleapp_alb",
            "module.loadbalancer_module.aws_lb_target_group.sampleapp_http_tg",
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "sampleapp_http_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:559072984281:targetgroup/sampleapp-http-lb-tg-staging/aa0306706fe46d6e",
            "arn_suffix": "targetgroup/sampleapp-http-lb-tg-staging/aa0306706fe46d6e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:559072984281:targetgroup/sampleapp-http-lb-tg-staging/aa0306706fe46d6e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sampleapp-http-lb-tg-staging",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c5b1742fcbd625dd"
          }
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privatesg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559072984281:security-group/sg-08cd43840f4f69247",
            "description": "private sg for ec2",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0abae003a4ec3f2b2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-08cd43840f4f69247",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0abae003a4ec3f2b2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "privatesg_staging",
            "name_prefix": "",
            "owner_id": "559072984281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awssgprv"
            },
            "tags_all": {
              "Name": "awssgprv"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b1742fcbd625dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_module.aws_security_group.publicsg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:559072984281:security-group/sg-0abae003a4ec3f2b2",
            "description": "public sg for load balancers ELB in staging",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0abae003a4ec3f2b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "publicsg_staging",
            "name_prefix": "",
            "owner_id": "559072984281",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "awssgpub"
            },
            "tags_all": {
              "Name": "awssgpub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5b1742fcbd625dd"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}